<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="168dp"
        android:layout_height="196dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/material_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_favicon" />

    <TextView
        android:id="@+id/tv_title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/satisfy"
        android:text="@string/description_app"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_baseline_alternate_email_24"
        app:layout_constraintBottom_toBottomOf="@+id/material_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/material_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/material_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/material_password">

        <EditText

            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_outline_security_24"
        app:layout_constraintBottom_toBottomOf="@+id/material_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/material_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/material_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bt_signin">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_signin"
        android:layout_width="146dp"
        android:layout_height="76dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/orange"
        android:elevation="5dp"
        android:fontFamily="@font/convergence"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_baseline_login_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_signup"
        android:layout_width="146dp"
        android:layout_height="76dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/green"
        android:elevation="5dp"
        android:fontFamily="@font/convergence"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_baseline_app_registration_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_signin" />

</androidx.constraintlayout.widget.ConstraintLayout>